--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
   provider: ^6.1.5
+  intl: ^0.20.2
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  firebase_storage: ^12.4.6
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.0+1
+  google_maps_flutter_web: ^0.5.12
 
 dev_dependencies:
   flutter_test:
