--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^12.0.0+1
   google_maps_flutter_web: ^0.5.12
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
