--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   permission_handler: ^12.0.0+1
   google_maps_flutter_web: ^0.5.12
   qr_flutter: ^4.1.0
+  http: ^1.4.0
+  path_provider: ^2.1.5
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
